subir y descargar imagenes a firebase Storage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,16 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
 }
 
+apply plugin:'kotlin-android-extensions'
+
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.willvargas.telemetria_esp8266"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -55,17 +57,16 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
-    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.3'
-    implementation 'com.google.firebase:firebase-firestore:23.0.3'
-    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation platform('com.google.firebase:firebase-bom:28.3.1')
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
-    implementation 'com.google.firebase:firebase-core:19.0.1'
+
+    implementation 'com.google.firebase:firebase-core'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-database:20.0.1'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -77,5 +78,5 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     //debugImplementation'com.amitshekhar.android:debug-db:1.0.6'
 
-
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
